<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/bothBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/popup_button_background"
        android:text="@string/both" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#fff0f2f2" />

    <Button
        android:id="@+id/jishuqiBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/popup_button_background"
        android:text="@string/jishuqi" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#fff0f2f2" />

    <Button
        android:id="@+id/timeBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/popup_button_background"
        android:text="@string/time" />
</LinearLayout>